# Image-RAG

./: README.md  demo.webm  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  routes.py  utils.py
frontend/: Dockerfile  vite.config.js
frontend/src/: App.js  App.jsx
frontend/src/constant/: constant.jsx
